data repository load

--- a/.env.defaults
+++ b/.env.defaults
@@ -15,6 +15,17 @@ VDJ_GUEST_ACCOUNT_SECRET=
 # VDJ Backbone Settings
 VDJ_BACKBONE_HOST=
 
+# MongoDB
+MONGODB_HOST=vdjr-mongo
+MONGODB_DB=v1airr
+MONGODB_USER=
+MONGODB_SECRET=
+MONGODB_QUERY_COLLECTION=
+MONGODB_LOAD_COLLECTION=
+
+# HOST user for Corral file access
+HOST_SERVICE_ACCOUNT=
+
 # Agave Misc. Settings
 AGAVE_STORAGE_SYSTEM=data.vdjserver.org
 
