--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apidevtools/json-schema-ref-parser": "8.0.0",
     "body-parser": "1.10.2",
     "chai": "3.5.0",
+    "csv-parser": "^2.3.2",
     "d3": "4.2.7",
     "errorhandler": "1.3.2",
     "express": "4.11.1",
@@ -31,6 +32,7 @@
     "mocha": "2.5.3",
     "moment": "2.10.6",
     "moment-timezone": "0.4.1",
+    "mongodb": "^3.4.1",
     "morgan": "1.5.1",
     "nock": "8.0.0",
     "nodemailer": "",
