AIRR schema support for data load, import/export metadata

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-openapi": "^6.0.0",
     "form-data": "2.3.2",
     "json-approver": "1.0.3",
+    "json-schema-ref-parser": "5.1.3",
     "js-yaml": "3.13.1",
     "kue": "0.10.5",
     "mocha": "2.5.3",
