--- a/.env.defaults
+++ b/.env.defaults
@@ -40,6 +40,7 @@ RECAPTCHA_PUBLIC=
 ALLOW_RECAPTCHA_SKIP=false
 USE_TEST_ACCOUNT=false
 TEST_ACCOUNT_USERNAME=
+ERROR_INJECTION=false
 
 # Email Settings
 EMAIL_ADDRESS=vdj@vdjserver.org
