--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "socket.io": "1.3.7",
     "underscore": "1.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.9.0"
+  },
   "scripts": {
+    "eslint": "eslint",
     "test": "make test"
   },
   "engines": {
