--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "8.0.0",
     "body-parser": "1.10.2",
+    "bull": "^3.20.0",
     "chai": "3.5.0",
     "csv-parser": "^2.3.2",
     "d3": "4.2.7",
