more implementation for ADC download cache

--- a/.env.defaults
+++ b/.env.defaults
@@ -24,6 +24,9 @@ MONGODB_LOAD_COLLECTION=
 
 # HOST user for Corral file access
 HOST_SERVICE_ACCOUNT=
+HOST_SERVICE_GROUP=
+VDJSERVER_DATA_PATH=/vdjZ/
+LRQDATA_PATH=/vdjZ/irplus/data/lrqdata/
 
 # Agave Misc. Settings
 AGAVE_STORAGE_SYSTEM=data.vdjserver.org
