utilize notifications from adc async api

--- a/.env.defaults
+++ b/.env.defaults
@@ -30,6 +30,7 @@ LRQDATA_PATH=/vdjZ/irplus/data/lrqdata/
 
 # Agave Misc. Settings
 AGAVE_STORAGE_SYSTEM=data.vdjserver.org
+AGAVE_NOTIFY_HOST=https://vdjserver.org
 
 # VDJ API Settings
 VDJ_API_URL=
