add repository entry as configuration parameter

--- a/.env.defaults
+++ b/.env.defaults
@@ -22,6 +22,9 @@ MONGODB_SECRET=
 MONGODB_QUERY_COLLECTION=
 MONGODB_LOAD_COLLECTION=
 
+# AIRR Data Commons
+ADC_REPOSITORY_ENTRY=adc
+
 # HOST user for Corral file access
 HOST_SERVICE_ACCOUNT=
 HOST_SERVICE_GROUP=
