--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "request": "2.51.0",
     "sinon": "1.17.4",
     "socket.io": "1.3.7",
+    "tar": "^6.1.2",
     "underscore": "1.7.0"
   },
   "devDependencies": {
