--- a/.env.defaults
+++ b/.env.defaults
@@ -24,6 +24,7 @@ MONGODB_LOAD_COLLECTION=
 
 # AIRR Data Commons
 ADC_REPOSITORY_ENTRY=adc
+ENABLE_ADC_DOWNLOAD_CACHE=true
 
 # HOST user for Corral file access
 HOST_SERVICE_ACCOUNT=
