--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -1075,6 +1075,26 @@ paths:
         '500':
           description: Internal service error occurred.
 
+  /adc/cache/study:
+    get:
+      description: get study cache entries
+      operationId: getADCDownloadCacheForStudies
+      tags:
+        - ADC
+      responses:
+        '200':
+          description: Success.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '400':
+          description: Bad request.
+        '401':
+          description: Not authorized.
+        '500':
+          description: Internal service error occurred.
+
   /adc/cache/study/{cache_uuid}:
     post:
       description: update cache settings for study
