--- a/swagger/vdjserver-api.yaml
+++ b/swagger/vdjserver-api.yaml
@@ -397,6 +397,61 @@ paths:
         '500':
           description: Internal service error occurred.
 
+  /project/{project_uuid}/file/import:
+    post:
+      description: Import an uploaded file into project
+      operationId: importFile
+      tags:
+        - project
+      security:
+        - project_authorization: []
+      parameters:
+        - name: project_uuid
+          in: path
+          description: project identifer
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              required:
+                - path
+              properties:
+                event:
+                  type: string
+                type:
+                  type: string
+                path:
+                  type: string
+                system:
+                  type: string
+                vdjFileType:
+                  type: number
+                readDirection:
+                  type: string
+                tags:
+                  type: string
+      responses:
+        '200':
+          description: Success.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  result:
+                    $ref: '#/components/schemas/ProjectMetadata'
+        '400':
+          description: Bad request.
+        '401':
+          description: Not authorized.
+        '500':
+          description: Internal service error occurred.
+
   /project/{project_uuid}/metadata/import:
     post:
       description: import metadata into project
