flag for enable/disable load

--- a/.env.defaults
+++ b/.env.defaults
@@ -25,6 +25,7 @@ MONGODB_LOAD_COLLECTION=
 # AIRR Data Commons
 ADC_REPOSITORY_ENTRY=adc
 ENABLE_ADC_DOWNLOAD_CACHE=true
+ENABLE_ADC_LOAD=false
 
 # HOST user for Corral file access
 HOST_SERVICE_ACCOUNT=
